syntax = "proto3";

package rpc_transport;
option go_package="./pb";

import "google/protobuf/empty.proto";

service UserController {
  rpc AddUser(RegisterUserRequest) returns (google.protobuf.Empty);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc UploadImage(UploadImageRequest) returns (google.protobuf.Empty);
  rpc AddAdmin(AddAdminRequest) returns (google.protobuf.Empty);
  rpc DeleteAdmin(DeleteAdminRequest) returns(google.protobuf.Empty);
  rpc GetImage(GetImageRequest) returns (GetImageResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GetRoles(GetRolesRequest) returns (RolesResponse);
}

message User {
  int32 id = 1;
  string name = 2;
  string password = 3;
  string image = 4;
}

message RegisterUserRequest {
  string name = 1;
  string password = 2;
  string image = 3;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string password = 3;
  string image = 4;
  string roles = 5;

}

message GetUserRequest {
  int32 id = 1;
}

message GetRolesRequest {
  int32 id = 1;
}

message RolesResponse {
  int32 id=1;
  string roles =2;
}
message AddAdminRequest {
  int32 id = 1;
}

message DeleteAdminRequest {
  int32 id = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
  string role = 3;
}

message UploadImageRequest {
  int32 id = 1;
  bytes imageBytes = 2;
}

message GetImageRequest {
  int32 id = 1;
}

message GetImageResponse {
  bytes imageData = 1;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  string token = 1;
}

message Succes{
  string Succes = 1;
}